syntax = "proto3";

package cqupt_user;

service UserController {
  rpc CreatUser(OneUserReq) returns (UserWithTokenRes);
  rpc Login(OneUserReq) returns (UserWithTokenRes);
  rpc FindOneUser (OneUserReq) returns (UserRes);
  rpc FindAllUsers(FindDataByPageReq) returns (UsersRes);
}

message StringDataResponse {
  int32 code = 1;
  string message = 2;
  string result = 3;
}

message UserData {
  string id = 1;
  string mobile = 2;
  string createdAt = 3;
  string updatedAt = 4;
  Card card = 5;
}

message OneUserReq {
  UserData data = 1;
}

message UserRes {
  UserData user = 1;
}

message UsersRes {
  repeated UserData users = 1;
}

message UserWithTokenRes {
  int32 code = 1;
  string message = 2;
  UserData user = 3;
  TokenInfo tokenInfo = 4;
  message TokenInfo {
    int32 expiresIn = 1;
    string accessToken = 2;
  }
}

message FindDataByPageReq {
  int32 pageNumber = 1;
  int32 pageSize = 2;
}


service DepartmentController {
  rpc CreatDepartment(DepartmentReq) returns (DepartmentRes);
  rpc FindAllDepartments(FindDataByPageReq) returns (DepartmentsRes);
}

message Department {
  string id = 1;
  string name = 2;
  string createdAt = 3;
  string updatedAt = 4;
}

message DepartmentReq {
  string name = 1;
}

message DepartmentRes {
  int32 code = 1;
  string message = 2;
  Department department = 3;
}

message DepartmentsRes {
  int32 code = 1;
  string message = 2;
  repeated Department departments = 3;
}

service CardController {
  rpc CreatCard(CreatCardReq) returns (CardRes);
  rpc FindOneCard(OneCardReq) returns (CardRes);
}

message Card {
  string stuNum = 1;
  UserData user = 2;
  string name = 3;
  int32 stuId = 4;
  string createdAt = 5;
  string updatedAt = 6;
  Department department = 7;
}

message CreatCardReq {
  string stuNum = 1;
  int32 stuId = 2;
  string name = 3;
  string userId = 4;
  string departmentId = 5;
}

message OneCardReq {
  Card data = 1;
}

message CardRes {
  int32 code = 1;
  string message = 2;
  Card card = 3;
}


